<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView_pick_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_up_location"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rel_pick_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_below="@+id/textView_pick_up"
        android:background="@drawable/white_border"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/txt_pick_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@null"
            android:hint="@string/enter_address"
            android:imeOptions="actionNext"
            tools:ignore="TextViewEdits" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_drop_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drop_off_location"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_below="@+id/rel_pick_up"
        tools:ignore="NestedWeights" />

    <RelativeLayout
        android:id="@+id/rel_drop_off"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:layout_below="@+id/textView_drop_off"
        android:background="@drawable/white_border"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/txt_drop_off"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@null"
            android:hint="@string/enter_address"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rel_drop_off"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/submit_button_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@+id/rel_drop_off"
        android:layout_marginTop="50dp"
        tools:context="com.fallntic.ridesharepassenger.MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />


    <ImageView
        android:id="@+id/ic_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_drop_off"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="60dp"
        android:src="@mipmap/ic_gps"/>

</RelativeLayout>