<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.fallntic.ridesharepassenger.CreateRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/client_name"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/client_name"
                android:background="@drawable/rounded_button_save"
                android:padding="7dp"
                android:text="@string/locations"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="UnknownId" />

            <TextView
                android:id="@+id/txt_pick_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_locations"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txt_drop_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_pick_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/riderTime"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_drop_off"
                android:text="@string/riderTime"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/rider_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/riderTime"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button_save"
                android:padding="7dp"
                android:text="@string/button_Date"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="UnknownId" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rider_date_button"
                android:layout_gravity="center"
                android:layoutMode="clipBounds"
                android:timePickerMode="spinner" />

            <EditText
                android:id="@+id/riderEditEst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timePicker"
                android:hint="@string/riderEstTime"
                android:text="" />

            <Button
                android:id="@+id/rider_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/riderEditEst"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button_save"
                android:padding="7dp"
                android:text="@string/submitRequest"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="UnknownId" />

            <Button
                android:id="@+id/rider_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rider_submit_button"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button_cancel"
                android:padding="7dp"
                android:text="@string/cancelRequest"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="UnknownId" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
